Added new route for tagbyid
